0.1-81
- add window.oce()
- make objects remember full filename, not just local filename (issue8)
- plot.tidem(): remove argument 'plot.type', using 'which' instead
- read.pt(): add arguments from, by, and to
- fix issue 57 [read.adp.rdi() read the heading incorrectly]
- add "reiniger-ross" method to ctd.decimate()
- add oce.approx()
- add topo.world dataset
- plot.ctd(): by default, make coastlines extend to box boundaries
- reformulate sun.angle in R
- fix google-code issue 56 [plot.topo() should accept land.z=NULL]
- fix google-code issue 55 [plot.topo() could go past poles]
- fix google-code issue 54 [plot.topo() was resetting par() on exit]
- fix google-code issue 53 [interp.barnes() gives poor error msg for mismatched x and y]
- fix google-code issue 52 [plot.section() draws incorrect bottom shape]
0.1-80
- add sun.angle [not tested yet; needs R reformulation]
- fix google-code issue 51 [summary.section() does not report water depth]
- fix google-code issue 50 [non-bug relating to sun elevation]
- fix google-code issue 49 [demo(TS) broken]
0.1-79
- fix google-code issue 48 [oce.plot.sticks() ignored page ratio]
- fix google-code issue 47 [cannot read new MEDS sealevel format]
0.1-78
- add data(RRprofile)
- to plot.TS(), add arguments lwd.rho and lty.rho
0.1-77
- refactor adp code wrt transformation matrices
- add matrix.smooth()
- improve labels for oce.axis.POSIXct()
- set default for 'debug' argument to getOption("oce.debug") in all functions
- plot.profile(): add argument ytype; change 'type' to 'xtype'
- add sw.z()
- add oce.smooth()
- add read.adv(), etc., supporting Nortek and Sontek devices
- add read.adp(), etc., supporting Nortek, RDI and Sontek devices
- add oce.plot.ts()
- add imagep()
- add bcd2integer()
- add matlab2POSIXt()
- to most plot functions, add 'mgp' and 'mar' arguments
- plot.pt(): add plim and Tlim arguments
- gravity(): give default for latitude argument
- plot.sealevel(): remove argument focus.time and add argument which